@@ -1,3 +1,7 @@
+AppJS vX.X.X changelog:
+ * Fixed broken font sizes in toolbar
+ * Segue UI Light used even on non-Windows devices
+
 AppJS v2.0.0 changelog:
  * template.js rewritten to be simpler and more versatile and was embedded into app.js
  * OpenModal/CloseModal added to template.js
